Rewrite bump-version script and replace icon picker dropdown with visual grid
Rewrote scripts/bump-version.mjs to work with the post-refactor file structure. The old script searched for version strings inside index.html files, but those strings now live in app.js after the v2.0.1 source splitting. The old script also appended "beta" to version strings (removed in v2.0.1) and only supported minor version bumps. The new script accepts an explicit version argument (e.g. node scripts/bump-version.mjs 2.0.2), targets the correct 5 source files (2 app.js, 2 index.html, 1 tauri.conf.json), uses regexes that match the current format without beta, and verifies all 7 version locations after updating. It also no longer touches the Tauri build output since that file is auto-generated by sync:tauri.

Changed the pretauri npm script from running bump-version.mjs (which auto-bumped the version on every Tauri build) to running sync-tauri-html.mjs instead, so Tauri builds automatically sync the latest source without unintentionally changing the version number. Version bumping is now a separate intentional step.

Replaced the icon picker dialog's plain text dropdown with a visual 4-column grid of clickable tiles. Each tile displays the actual icon image (36x36) with a label underneath, so users can see what they are picking before they save. Clicking a tile highlights it with a blue border. The last tile is a "+" upload option for custom icons. The upload flow, preview, save, and skip behavior are all unchanged. Updated the "Hoodie" display label to "Performance Hoodie" and "Backpack" to "Misc" in the icon choices for both desktop and mobile.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -829,10 +829,8 @@
       <div class="dialog-body">
         <h3>Choose Icon</h3>
         <p id="type-icon-message">Pick an icon for this type.</p>
-        <div class="dialog-row">
-          <label for="type-icon-select">Icon</label>
-          <select id="type-icon-select"></select>
-        </div>
+        <div id="type-icon-grid"></div>
+        <select id="type-icon-select" style="display:none;"></select>
         <div class="dialog-row" id="type-icon-upload-row" style="display:none;">
           <label for="type-icon-upload">Upload Image</label>
           <input type="file" id="type-icon-upload" accept="image/*" style="font-size:0.85rem;">
