Add Hales Speed Shop to featured brands and update legal disclaimer
Added Hales Speed Shop (https://www.halesspeedshop.com/) to the Featured Brands list in the Credits and Acknowledgements dialog on both desktop and mobile. Also added both Hales Speed Shop and Retro Rifle to the legal disclaimer's non-affiliation statement, which was previously missing Retro Rifle despite it being in the featured brands list. The disclaimer now lists all 8 featured brands: RSVLTS, 7-Strong, Reyn Spooner, Project Good Apparel, Dixxon, Park Candy, Retro Rifle, and Hales Speed Shop.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -486,8 +486,9 @@
         <div><a href="https://www.projectgoodapparel.co/">Project Good Apparel</a></div>
         <div><a href="https://www.dixxon.com/">Dixxon</a></div>
         <div><a href="https://www.parkcandy.com/">Park Candy</a></div>
-        <div><a href="https://retro-rifle.com/">Retro Rifle</a></div>
-        <div><strong>Community Credits:</strong></div>
+          <div><a href="https://retro-rifle.com/">Retro Rifle</a></div>
+          <div><a href="https://www.halesspeedshop.com/">Hales Speed Shop</a></div>
+          <div><strong>Community Credits:</strong></div>
         <div>Product images sourced in part from <a href="https://www.roughridersregistry.com/">The Rough Rider Registry</a>, an independent fan-run catalog of RSVLTS products. Used with appreciation for their work in documenting the RSVLTS community.</div>
         <p>Icon attributions: <a href="https://www.flaticon.com/free-icons/backpack" title="backpack icons">Backpack</a>, <a href="https://www.flaticon.com/free-icons/underwear" title="underwear icons">Underwear</a>, <a href="https://www.flaticon.com/free-icons/hoodie" title="hoodie icons">Hoodie</a>, <a href="https://www.flaticon.com/free-icons/shirt" title="shirt icons">Shirt</a>, <a href="https://www.flaticon.com/free-icons/shirt" title="shirt icons">Shirt (alt)</a>, <a href="https://www.flaticon.com/free-icons/hat" title="hat icons">Hat</a>, <a href="https://www.flaticon.com/free-icons/parka" title="parka icons">Parka</a>, <a href="https://www.flaticon.com/free-icons/clothes" title="clothes icons">Clothes</a>, <a href="https://www.flaticon.com/free-icons/garment" title="garment icons">Garment</a>, <a href="https://www.flaticon.com/free-icons/hawaiian-shirt" title="hawaiian shirt icons">Hawaiian shirt</a>, <a href="https://www.flaticon.com/free-icons/sock" title="sock icons">Sock</a>, <a href="https://www.flaticon.com/free-icons/hoodie" title="hoodie icons">Hoodie (alt)</a>. All icons are from Flaticon and credited to their original creators.</p>
         <div>Fonts sourced from <a href="https://dafont.com">dafont.com</a></div>
@@ -501,7 +502,7 @@
         <div><strong>Legal Disclaimer &amp; Terms of Use</strong></div>
         <div><strong>App Name:</strong> Shirt Tracker</div>
         <div><strong>1. Non-Commercial Fan Project</strong></div>
-        <p>"Shirt Tracker" is an unofficial, fan-made application created solely for hobbyist and personal use. It is not endorsed, sponsored, affiliated with, or authorized by RSVLTS, 7-Strong, Reyn Spooner, Project Good Apparel, Dixxon, Park Candy, or any of their subsidiaries.</p>
+        <p>"Shirt Tracker" is an unofficial, fan-made application created solely for hobbyist and personal use. It is not endorsed, sponsored, affiliated with, or authorized by RSVLTS, 7-Strong, Reyn Spooner, Project Good Apparel, Dixxon, Park Candy, Retro Rifle, Hales Speed Shop, or any of their subsidiaries.</p>
         <div><strong>2. Intellectual Property &amp; Trademarks</strong></div>
         <p>All company names, brand names, trademarks, logos, and images appear in this application for identification and tracking purposes only. They remain the property of their respective owners.</p>
         <p>The creator of this app makes no claim of ownership over any third-party intellectual property, images, or assets used within the application.</p>
