--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -75,8 +75,8 @@
       <div class="wrap">
           <div class="title-card">
             <div class="title-row">
-            <h1 id="app-title"><span class="title-emoji">🌺</span><span class="title-emoji">👕</span><span class="title-text"><span class="title-word">Shirt</span><span class="title-word">Tracker</span></span><span class="title-emoji">👕</span><span class="title-emoji">🌺</span></h1>
-            <p id="app-subtitle">Shirt Tracker is a fan-made open-source clothing inventory system.</p>
+            <h1 id="app-title"><img src="assets/shirt-tracker.png" alt="Shirt Tracker" style="max-width:min(500px, 90vw); height:auto; display:block; margin:0 auto;"></h1>
+            <p id="app-subtitle">An open-source, fan-made clothing inventory system for hobbyists.</p>
             </div>
           </div>
       </div>
