--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -294,7 +294,7 @@
                 <input type="text" id="shirt-update-date" readonly>
               </div>
               <div class="update-row">
-                <label for="app-update-date">Last Deployment</label>
+                <label for="app-update-date">App Last Updated</label>
                 <input type="text" id="app-update-date" value="2/3/2026, 12:43:59 PM" readonly>
               </div>
               <div class="event-log-link"><a href="#" id="event-log-link">Event Log</a></div>
