Add GitHub repo link, restyle legal title, and remove Mickey logo
Added a GitHub Repository link to the legal section footer in both desktop and mobile HTML, placed between Privacy Policy and the version line. Restyled the "The Legal Stuff" title to match the Impact/uppercase/accent-color style used by Update Log and Danger Zone section titles. Removed the decorative Mickey font logo letter from both HTML files, removed the Mickey @font-face declaration and all .logo-letter CSS rules from both stylesheets, and deleted the mickey.ttf font file from both source font folders. Rebuilt web-root and synced Tauri.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -85,7 +85,6 @@
     <main class="wrap">
       <section class="sheet">
         <div class="sheet-header">
-          <h2><span class="logo-letter">A</span></h2>
           <div class="signedout-login">
             <button class="btn secondary" id="auth-action-signedout">Sign In</button>
             <div class="signedout-help">Please login to continue. Need access? <a href="#request-access" id="request-access-link">Request access</a>.</div>
@@ -332,6 +331,7 @@
               <p><a href="#" id="legal-disclaimer-link">Legal Disclaimer &amp; Terms of Use</a></p>
               <p><a href="#" id="credits-link">Credits &amp; Acknowledgements</a></p>
               <p><a href="#" id="privacy-policy-link">Privacy Policy</a> | <a href="#" id="contact-link">Contact Us</a></p>
+              <p><a href="https://github.com/aaronmdunn/shirt-tracker" target="_blank">GitHub Repository</a></p>
               <div class="footer-version-line" id="footer-version-line"></div>
             </div>
           </div>
