Add wishlist mode with segmented switcher and separate storage
Added a segmented Inventory/Wishlist toggle button centered above the tab bar on both desktop and mobile. The wishlist operates as a completely independent mode with its own tabs, rows, columns, and localStorage keys (wishlist-db-v1, wishlist-tabs-v1, wishlist-columns-v1), so inventory and wishlist data never overlap. Wishlist default columns are Brand (first), Shirt Name, Type, Fandom, Size, Preview, and Notes, deliberately omitting Condition and Price. An enforceWishlistColumns function runs on every wishlist load to strip any Condition or Price columns that may have leaked from inventory, ensure Brand exists and is in the first position, and save the corrected state. Brand is a per-tab dropdown with Add new support, and brand options are saved per tab via columnOverrides.brandOptionsByTab. Each wishlist row has a green Got It button that moves the row to the active inventory tab by mapping cell values by column name, then removes it from the wishlist. The mode switcher is hidden on the login screen and only appears after sign-in. Cloud sync via buildCloudPayload and applyCloudPayload now includes a wishlist property containing the wishlist tabs, tab states, column overrides, and global columns alongside the existing inventory data. The selected mode persists across page reloads via the shirts-app-mode localStorage key, and switching modes snapshots the outgoing mode state and restores the incoming mode state so no data is lost during transitions.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -204,6 +204,7 @@
               <button type="button" aria-label="Remove column">Delete</button>
             </div>
           </div></div></div>
+        <div id="mode-switcher"></div>
         <div class="tab-bar" id="tab-bar"></div>
         <div class="filter-row">
           <div class="top-table-actions">
