--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -226,6 +226,7 @@
               <button type="button" aria-label="Remove column">Delete</button>
             </div>
           </div></div></div>
+        <div id="mode-switcher"></div>
         <div class="tab-bar" id="tab-bar"></div>
         <div class="filter-row">
           <div class="filter-center">
