Match CSV overwrite by name with safe fallback
Updates CSV overwrite and fill-empty to match rows by the Name column (first match, case-insensitive), fall back to row order when all Name cells are empty, and skip Preview/photo columns entirely while keeping dialog guidance and build outputs in sync.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -831,7 +831,7 @@
             </label>
           </div>
         </div>
-        <div class="dialog-row" style="color: var(--muted); font-size: 0.78rem;">Overwrite and fill-empty match rows by order (CSV row 1 goes to table row 1).</div>
+        <div class="dialog-row" style="color: var(--muted); font-size: 0.78rem;">Overwrite and fill-empty match rows by Name (first match). If every Name cell is empty, it falls back to row order.</div>
         <div class="dialog-row">
           <div style="display:flex; gap:8px; flex-wrap:wrap;">
             <button type="button" class="btn secondary" id="csv-import-select-all">Select All</button>
