--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -850,7 +850,7 @@
             </label>
           </div>
         </div>
-        <div class="dialog-row" style="color: var(--muted); font-size: 0.78rem;">Overwrite and fill-empty match rows by Name (first match). If every Name cell is empty, it falls back to row order.</div>
+        <div class="dialog-row" style="color: var(--muted); font-size: 0.78rem;">Overwrite and fill-empty match rows by Name (first match). If a Name cell is blank, it falls back to row order for that row.</div>
         <div class="dialog-row">
           <div style="display:flex; gap:8px; flex-wrap:wrap;">
             <button type="button" class="btn secondary" id="csv-import-select-all">Select All</button>
