Fix logo layout shift on load and bump Tauri config to v2.0.4

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -75,7 +75,7 @@
       <div class="wrap">
           <div class="title-card">
             <div class="title-row">
-            <h1 id="app-title"><img src="assets/shirt-tracker.png" alt="Shirt Tracker" style="max-width:min(500px, 90vw); height:auto; display:block; margin:0 auto;"></h1>
+            <h1 id="app-title"><img src="assets/shirt-tracker.png" alt="Shirt Tracker" width="3292" height="952" style="max-width:min(500px, 90vw); height:auto; display:block; margin:0 auto;"></h1>
             <p id="app-subtitle">An open-source, fan-made clothing inventory system for hobbyists.</p>
             </div>
           </div>
