Rename Change Log to Changelog

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -281,7 +281,7 @@
                 <input type="text" id="app-update-date" value="2/3/2026, 12:43:59 PM" readonly>
               </div>
               <div class="event-log-link"><a href="#" id="event-log-link">Event Log</a></div>
-              <div class="event-log-link"><a href="#" id="changelog-link">Change Log</a></div>
+              <div class="event-log-link"><a href="#" id="changelog-link">Changelog</a></div>
             </div>
             <div class="backup-box">
               <div class="backup-title">Cloud Backup</div>
@@ -864,7 +864,7 @@
 
     <dialog id="changelog-dialog">
       <div class="dialog-body">
-        <h3>Change Log</h3>
+        <h3>Changelog</h3>
         <div id="changelog-list"></div>
       </div>
       <div class="dialog-actions">
