Automate access requests — send Supabase invite on form submit

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -696,13 +696,12 @@
     </dialog>
 
     <dialog id="request-access-dialog">
-      <form id="request-access-form" name="access-request" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" target="request-access-iframe">
+      <form id="request-access-form">
         <div class="dialog-body">
           <h3>Request Access</h3>
           <div style="display:none;">
-            <label>Do not fill this out: <input name="bot-field"></label>
+            <label>Do not fill this out: <input id="request-access-bot" name="bot-field"></label>
           </div>
-          <input type="hidden" name="form-name" value="access-request">
           <div class="dialog-row">
             <label for="request-access-name">Name</label>
             <input id="request-access-name" type="text" name="name" placeholder="Your name" required>
@@ -711,11 +710,11 @@
             <label for="request-access-email">Email</label>
             <input id="request-access-email" type="email" name="email" placeholder="you@email.com" required>
           </div>
-          <div class="dialog-row" style="color: var(--muted); font-size: 0.8rem;">Requests go to the admin and take 24-72 hours for approval.</div>
+          <div class="dialog-row" id="request-access-message" style="color: var(--muted); font-size: 0.8rem;"></div>
         </div>
         <div class="dialog-actions">
           <button type="button" class="btn secondary" id="request-access-close">Close</button>
-          <button type="submit" class="btn">Send Request</button>
+          <button type="submit" class="btn" id="request-access-submit">Send Request</button>
         </div>
       </form>
     </dialog>
@@ -723,13 +722,12 @@
     <dialog id="request-access-thanks">
       <div class="dialog-body" style="text-align:center; font-family:inherit;">
         <h3 style="font-family:inherit;">Thank You</h3>
-        <div style="color: var(--muted); font-size: 0.9rem; text-align:center; font-family:inherit;">We will review your request.</div>
+        <div style="color: var(--muted); font-size: 0.9rem; text-align:center; font-family:inherit;">Check your email for an invite link to set up your account.</div>
       </div>
       <div class="dialog-actions">
         <button type="button" class="btn" id="request-access-thanks-close">Close</button>
       </div>
     </dialog>
-    <iframe name="request-access-iframe" style="display:none;"></iframe>
 
     <dialog id="reset-password-dialog">
       <div class="dialog-body">
