Shrink Manage Tags button size

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -661,7 +661,7 @@
         </div>
       </div>
       <div class="dialog-actions">
-        <button type="button" class="btn secondary" id="tags-manage-btn" style="margin-right:auto;">Manage Tags</button>
+        <button type="button" class="btn secondary" id="tags-manage-btn" style="margin-right:auto; padding:4px 10px; font-size:0.78rem;">Manage Tags</button>
         <button type="button" class="btn" id="tags-close">Close</button>
       </div>
     </dialog>
