Move Recycle Bin button to Danger Zone box for better visibility

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -316,9 +316,6 @@
                 <button class="btn secondary" id="export-csv" type="button" style="padding:6px 10px; font-size:0.78rem; width:fit-content;">Export CSV</button>
                 <button class="btn secondary" id="import-csv" type="button" style="padding:6px 10px; font-size:0.78rem; width:fit-content;">Import CSV</button>
               </div>
-              <div style="display:flex; justify-content:center; margin-top:8px;">
-                <a href="#" id="recycle-bin-link" style="font-size:0.78rem; color:var(--muted);">Recycle Bin</a>
-              </div>
             </div>
             <div class="danger-box">
               <div class="danger-title">Danger Zone</div>
@@ -326,6 +323,7 @@
                 <button class="btn danger" id="clear-all">🛑 Reset Tab</button>
                 <button class="btn success" id="undo-clear" disabled>↩️ Undo Clear</button>
                 <button class="btn danger" id="reset-fresh">⚠️ Wipe & Reset</button>
+                <button class="btn secondary" id="recycle-bin-link">♻️ Recycle Bin</button>
               </div>
               <div class="danger-disclaimer">Use these buttons at your own risk!</div>
             </div>
